# opcnclaw_cn

./: .cursorrules  .dockerignore  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_PLAN_v4.md  DEV_ROADMAP.md  DEV_TASKS_CLAUDE.md  DEV_TASKS_CURSOR.md  Dockerfile  OpenClaw.vbs  OpenClaw使用说明书.md  README.md  TESTING.md  TEST_PLAN_R11-R16.md  _create_launcher.vbs  build.bat  build.py  build_installer.bat  build_portable.py  config.ini  docker-compose.yml  generate_manifest.py  glm_error.txt  install-service.ps1  install.bat  install_full.bat  installer.iss  launcher.py  openclaw.spec  openclaw_debug.bat  package-lock.json  package.json  pytest.ini  requirements-full.txt  requirements.txt  requirements_offline.txt  setup-tunnel.ps1  (+8 more)
certs/: ca.crt  ca.key  server.crt  server.key
data/: memory.db  stats.db
docs/: AGENT_ROLES_FULL.md  AGENT_SKILLS_MAP.md  BUSINESS_PLAN.md  DEV_PLAN_V5.md  DEV_PLAN_V5_CLUSTER.md  FIRST_RUN_DESIGN.md  PET_COMMANDER_DESIGN.md  PET_ROBOT_DESIGN.md  QUICKSTART.md  SKILL_SDK.md  UX_REDESIGN_V2.md  VISION_NEXT.md
installer/: build_embedded_python.py  prebundle_deps.py
scripts/: gen_certs.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: boot_test.py  conftest.py  test_a2a.py  test_agent_team.py  test_benchmark.py  test_bridges.py  test_cowork.py  test_db.py  test_health.py  test_i18n.py  test_intent_fusion.py  test_memory_search.py  test_model_downloader.py  test_modules.py  test_offline.py  test_performance.py  test_phase13.py  (+6 more)
(+234 files in other folders)
