[package]
name = "shisanxiang"
version = "4.1.0"
description = "十三香小龙虾 AI 桌面客户端"
authors = ["OpenClaw Team"]
edition = "2021"

[lib]
name = "shisanxiang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "webview-data-url", "transparent"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
open = "5"
